    Added Visual C++ 200x projects and fixed VC6 project.

    Fixed xml::event_parser::parse_stream() to return false on empty
    input (Michael Grundberg, #2787836).

    Converted test suite to Boost Test.

Version 0.6.0

    Fixed libxmlwrapp to not depend on libxslt if XSLT support
    is enabled (Vadim Zeitlin, #1927398).

    Ported Unix build system to Autotools.

    Split pkg-config file xmlwrapp.pc into xmlwrapp.pc and
    xsltwrapp.pc. Applications that use libxsltwrapp need to be
    updated to use the latter (too).

    Input document to xslt::stylesheet::apply() is now passed as
    const reference instead of non-const one.

    It is no longer necessary to instantiate xml/xslt::init object before
    using the library; this is now done automatically (thread safety is
    preserved) and new code shouldn't do it. Moreover, creating multiple
    xml/xslt::init object instances is now possible and doesn't result in
    multiple initialization/shutdown of the library.

    Configuration methods of xml/xslt::init classes are now static.

    The previously separate manual was merged with Doxygen documentation so
    that all documentation is available in single place. As a consequence,
    PDF version of the manual is no longer provided, use HTML documentation
    included with xmlwrapp source distribution.

    Added xml::node::get_namespace() function.

    Added new constructor to the xml::node class for creating text nodes,
    using xml::node::text helper struct.

    Improved iterators performance (only if Boost.Pool is available).

    Added xml::node::elements() methods for efficient iteration over child
    elements. In most cases, this is a better alternative to find().

Version 0.5.1

    Various compilation fixes.

Version 0.5.0

    Fixed a null pointer dereference problem in
    xml::attributes, Bug ID 20. Thanks goes to John K. Hohm
    for finding this and providing a working patch.
